<resources>
    <string name="app_name">Drink Survey</string>
    <string name="drinks_survey">Drinks Survey</string>
    <string name="client_number">Client Number :</string>
    <string name="drink_type">Drink Type :</string>
    <string name="drink">Drink :</string>
    <string name="no_of_cups_day">No of cups/day :</string>
    <string name="add">Add</string>
    <string name="new_Button">New</string>
    <string name="results">Results</string>
    <string-array name="drinkTypeArray">
        <item>Juice</item>
        <item>Soda</item>
        <item>Shakes</item>
    </string-array>
    <string-array name="Juice">
        <item>Apple</item>
        <item>Orange</item>
        <item>Mixed</item>
    </string-array>
    <string-array name="Soda">
        <item>Coke</item>
        <item>Sprite</item>
        <item>Diet Coke</item>
    </string-array>
    <string-array name="Shakes">
        <item>PeanutButter</item>
        <item>Mango</item>
    </string-array>
</resources>
